<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.photo.PhotoFragment"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/image_placeholder"
                    android:id="@+id/detail_photo"
                    android:adjustViewBounds="true"
                    android:scaleType="fitEnd"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/image_item"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_description"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="@string/detail_stub_title"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_author"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="@string/detail_stub_author"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_dimensions"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="@string/detail_stub_dimensions"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_link_full"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="@string/detail_stub_link_fill"
                    android:autoLink="web"
                    />
        </LinearLayout>
    </ScrollView>

</LinearLayout>